--- a/Lesson4/index.html
+++ b/Lesson4/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <!-- liên kết file css -->
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <h2>CSS Positioning</h2>
     <div class="position1">
@@ -16,6 +18,25 @@
         <p class="child3">fixed: cố định trên của sổ trình duyệt</p>
         <p>sticky: đứng yên 1 chỗ khi cuộn đến vị trí nhất định</p>
     </div>
-    
+
+    <hr>
+
+    <h2>CSS Flexbox</h2>
+    <div class="container">
+        <img src="./images/anh1.png" alt="">
+        <img src="./images/anh2.png" alt="">
+        <img src="./images/anh3.png" alt="">
+        <img src="./images/anh4.png" alt="">
+    </div>
+
+    <!-- Responsive -->
+    <h2>Responsive website</h2>
+    <p id="test">Test Responsive</p>
+
+    <!-- BTVN -->
+     <h2>BTVN (thực hành positioning)</h2>
+     <img src="./images/anh5.png" alt="">
+
 </body>
+
 </html>
