--- a/Lesson6/index.html
+++ b/Lesson6/index.html
@@ -95,7 +95,7 @@
                 <a href="#" class="btn btn-primary">Mua ngay</a>
             </div>
         </div>
-        
+
         <!-- Từng sản phẩm -->
         <div class="card" style="width: 18rem;">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaIupEXS0BI-tX956tkm95S1CUB3GO9sCH8Qpy7Yk5GsBVEAr-TZOihgOIWvgWWIBrZSI&usqp=CAU"
@@ -174,6 +174,68 @@
         </div>
 
     </div>
+
+    <!-- Pagination -->
+    <nav id="pagination" aria-label="...">
+        <ul class="pagination">
+            <li class="page-item"><a href="#" class="page-link">Previous</a></li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item active">
+                <a class="page-link" href="#" aria-current="page">2</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+        </ul>
+    </nav>
+
+    <!-- Footer -->
+    <footer class="footer mt-5">
+        <div class="container py-5">
+            <div class="row gy-4">
+                <!-- Cột 1: Logo & giới thiệu -->
+                <div class="col-md-4">
+                    <h3 class="footer-logo mb-3">LuxeFurni</h3>
+                    <p class="footer-text">
+                        LuxeFurni mang đến cho bạn những sản phẩm nội thất tinh tế, hiện đại và sang trọng,
+                        giúp không gian sống trở nên đẳng cấp hơn mỗi ngày.
+                    </p>
+                </div>
+
+                <!-- Cột 2: Liên kết nhanh -->
+                <div class="col-md-4">
+                    <h5 class="footer-title">Liên kết nhanh</h5>
+                    <ul class="list-unstyled footer-links">
+                        <li><a href="#">Trang chủ</a></li>
+                        <li><a href="#">Sản phẩm</a></li>
+                        <li><a href="#">Khuyến mãi</a></li>
+                        <li><a href="#">Giới thiệu</a></li>
+                        <li><a href="#">Liên hệ</a></li>
+                    </ul>
+                </div>
+
+                <!-- Cột 3: Thông tin liên hệ -->
+                <div class="col-md-4">
+                    <h5 class="footer-title">Liên hệ</h5>
+                    <ul class="list-unstyled footer-contact">
+                        <li><i class="bi bi-geo-alt-fill me-2"></i>123 Nguyễn Văn Linh, Hà Nội</li>
+                        <li><i class="bi bi-telephone-fill me-2"></i>+84 987 654 321</li>
+                        <li><i class="bi bi-envelope-fill me-2"></i>support@luxefurni.vn</li>
+                    </ul>
+                    <div class="footer-social mt-3">
+                        <a href="#"><i class="bi bi-facebook"></i></a>
+                        <a href="#"><i class="bi bi-instagram"></i></a>
+                        <a href="#"><i class="bi bi-youtube"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <hr class="footer-divider my-4" />
+
+            <div class="text-center small footer-bottom">
+                © 2025 LuxeFurni. All Rights Reserved.
+            </div>
+        </div>
+    </footer>
 
     <!-- Bootstrap Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
