--- a/Lesson8/index.html
+++ b/Lesson8/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +13,7 @@
     <link rel="stylesheet" href="./css/header-footer.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
 
     <!-- NAVBAR -->
@@ -25,9 +27,8 @@
             </a>
 
             <!-- Toggle button -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNav" aria-controls="navbarNav"
-                    aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -55,7 +56,191 @@
         </div>
     </nav>
 
+    <!-- MAIN CONTENT -->
+    <main>
+
+        <!-- Carousel -->
+        <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="https://www.vivere.co.id/uploads/articles/54/banner-merak.png" class="d-block w-100"
+                        alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://assets.architecturaldigest.in/photos/658e82c49704c0e4c5059514/master/w_1600%2Cc_limit/20230706_Revised%2520Set_1%2520(1).png"
+                        class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://www.modernfurnishings.com/cdn/shop/articles/the-role-of-minimalism-in-modern-furniture-design-modern-studio.jpg?v=1717752151"
+                        class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+        <h2 style="margin: 20px;">Danh mục sản phẩm</h2>
+
+        <!-- Container chứa các sản phẩm -->
+        <div class="container-items">
+            <!-- Từng sản phẩm -->
+            <div class="card" style="width: 18rem;">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaIupEXS0BI-tX956tkm95S1CUB3GO9sCH8Qpy7Yk5GsBVEAr-TZOihgOIWvgWWIBrZSI&usqp=CAU"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Sofa Mark</h5>
+                    <p class="card-text">Đây là sofa Mark của thầy Trung</p>
+                    <a href="#" class="btn btn-primary">Mua ngay</a>
+                </div>
+            </div>
+
+            <!-- Từng sản phẩm -->
+            <div class="card" style="width: 18rem;">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaIupEXS0BI-tX956tkm95S1CUB3GO9sCH8Qpy7Yk5GsBVEAr-TZOihgOIWvgWWIBrZSI&usqp=CAU"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Sofa Mark</h5>
+                    <p class="card-text">Đây là sofa Mark của thầy Trung</p>
+                    <a href="#" class="btn btn-primary">Mua ngay</a>
+                </div>
+            </div>
+
+            <!-- Từng sản phẩm -->
+            <div class="card" style="width: 18rem;">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaIupEXS0BI-tX956tkm95S1CUB3GO9sCH8Qpy7Yk5GsBVEAr-TZOihgOIWvgWWIBrZSI&usqp=CAU"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Sofa Mark</h5>
+                    <p class="card-text">Đây là sofa Mark của thầy Trung</p>
+                    <a href="#" class="btn btn-primary">Mua ngay</a>
+                </div>
+            </div>
+
+            <!-- Từng sản phẩm -->
+            <div class="card" style="width: 18rem;">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaIupEXS0BI-tX956tkm95S1CUB3GO9sCH8Qpy7Yk5GsBVEAr-TZOihgOIWvgWWIBrZSI&usqp=CAU"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Sofa Mark</h5>
+                    <p class="card-text">Đây là sofa Mark của thầy Trung</p>
+                    <a href="#" class="btn btn-primary">Mua ngay</a>
+                </div>
+            </div>
+
+            <!-- Từng sản phẩm -->
+            <div class="card" style="width: 18rem;">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaIupEXS0BI-tX956tkm95S1CUB3GO9sCH8Qpy7Yk5GsBVEAr-TZOihgOIWvgWWIBrZSI&usqp=CAU"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Sofa Mark</h5>
+                    <p class="card-text">Đây là sofa Mark của thầy Trung</p>
+                    <a href="#" class="btn btn-primary">Mua ngay</a>
+                </div>
+            </div>
+
+            <!-- Từng sản phẩm -->
+            <div class="card" style="width: 18rem;">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaIupEXS0BI-tX956tkm95S1CUB3GO9sCH8Qpy7Yk5GsBVEAr-TZOihgOIWvgWWIBrZSI&usqp=CAU"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Sofa Mark</h5>
+                    <p class="card-text">Đây là sofa Mark của thầy Trung</p>
+                    <a href="#" class="btn btn-primary">Mua ngay</a>
+                </div>
+            </div>
+
+            <!-- Từng sản phẩm -->
+            <div class="card" style="width: 18rem;">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaIupEXS0BI-tX956tkm95S1CUB3GO9sCH8Qpy7Yk5GsBVEAr-TZOihgOIWvgWWIBrZSI&usqp=CAU"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Sofa Mark</h5>
+                    <p class="card-text">Đây là sofa Mark của thầy Trung</p>
+                    <a href="#" class="btn btn-primary">Mua ngay</a>
+                </div>
+            </div>
+
+            <!-- Từng sản phẩm -->
+            <div class="card" style="width: 18rem;">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaIupEXS0BI-tX956tkm95S1CUB3GO9sCH8Qpy7Yk5GsBVEAr-TZOihgOIWvgWWIBrZSI&usqp=CAU"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Sofa Mark</h5>
+                    <p class="card-text">Đây là sofa Mark của thầy Trung</p>
+                    <a href="#" class="btn btn-primary">Mua ngay</a>
+                </div>
+            </div>
+
+        </div>
+
+    </main>
+
+    <!-- FOOTER -->
+    <footer class="footer bg-dark text-light pt-5 pb-4 mt-5">
+        <div class="container">
+
+            <div class="row">
+
+                <!-- Cột 1: Logo + mô tả -->
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <h5 class="footer-logo mb-3">Nội Thất Luxury</h5>
+                    <p class="footer-desc">
+                        Chuyên cung cấp các sản phẩm nội thất cao cấp, sang trọng và hiện đại.
+                        Mang đến không gian sống tiện nghi – đẳng cấp cho mọi gia đình.
+                    </p>
+                </div>
+
+                <!-- Cột 2: Liên kết nhanh -->
+                <div class="col-lg-2 col-md-6 mb-4">
+                    <h6 class="footer-title">Liên kết</h6>
+                    <ul class="list-unstyled">
+                        <li><a href="index.html" class="footer-link">Trang chủ</a></li>
+                        <li><a href="sanpham.html" class="footer-link">Sản phẩm</a></li>
+                        <li><a href="dichvu.html" class="footer-link">Dịch vụ</a></li>
+                        <li><a href="gioithieu.html" class="footer-link">Giới thiệu</a></li>
+                        <li><a href="lienhe.html" class="footer-link">Liên hệ</a></li>
+                    </ul>
+                </div>
+
+                <!-- Cột 3: Thông tin liên hệ -->
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <h6 class="footer-title">Thông tin</h6>
+                    <ul class="list-unstyled footer-info">
+                        <li>📍 123 Đường Nội Thất, Hà Nội</li>
+                        <li>📞 0988 123 456</li>
+                        <li>✉️ noithatluxury@gmail.com</li>
+                    </ul>
+                </div>
+
+                <!-- Cột 4: Mạng xã hội -->
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <h6 class="footer-title">Theo dõi chúng tôi</h6>
+                    <div class="d-flex gap-3 social-icons">
+                        <a href="#"><i class="bi bi-facebook"></i></a>
+                        <a href="#"><i class="bi bi-instagram"></i></a>
+                        <a href="#"><i class="bi bi-youtube"></i></a>
+                        <a href="#"><i class="bi bi-tiktok"></i></a>
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- Dòng bản quyền -->
+            <div class="text-center mt-4 pt-3 border-top border-secondary">
+                <p class="mb-0">&copy; 2025 Nội Thất Luxury. All rights reserved.</p>
+            </div>
+
+        </div>
+    </footer>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
