--- a/Lesson8/lienhe.html
+++ b/Lesson8/lienhe.html
@@ -57,7 +57,86 @@
     </nav>
 
     <!-- MAIN CONTENT -->
-    <main></main>
+    <main>
+        <!-- MAIN CONTENT -->
+        <section class="contact-section py-5">
+            <div class="container">
+
+                <!-- Tiêu đề -->
+                <div class="text-center mb-5">
+                    <h2 class="section-title">Liên hệ với chúng tôi</h2>
+                    <p class="section-desc">
+                        Đội ngũ của <strong>Nội Thất Luxury</strong> luôn sẵn sàng hỗ trợ bạn trong mọi nhu cầu về nội
+                        thất.
+                    </p>
+                </div>
+
+                <div class="row g-4">
+
+                    <!-- Form liên hệ -->
+                    <div class="col-lg-7">
+                        <div class="contact-form p-4 shadow-sm rounded">
+                            <h5 class="mb-4">Gửi thông tin của bạn</h5>
+
+                            <form>
+                                <div class="mb-3">
+                                    <label class="form-label">Họ và tên</label>
+                                    <input type="text" class="form-control" placeholder="Nhập họ tên" required>
+                                </div>
+
+                                <div class="mb-3">
+                                    <label class="form-label">Email</label>
+                                    <input type="email" class="form-control" placeholder="Nhập email" required>
+                                </div>
+
+                                <div class="mb-3">
+                                    <label class="form-label">Số điện thoại</label>
+                                    <input type="text" class="form-control" placeholder="Nhập số điện thoại">
+                                </div>
+
+                                <div class="mb-3">
+                                    <label class="form-label">Nội dung</label>
+                                    <textarea class="form-control" rows="5" placeholder="Viết nội dung cần hỗ trợ..."
+                                        required></textarea>
+                                </div>
+
+                                <button type="submit" class="btn btn-send w-100">Gửi thông tin</button>
+                            </form>
+                        </div>
+                    </div>
+
+                    <!-- Thông tin liên hệ -->
+                    <div class="col-lg-5">
+                        <div class="contact-info p-4 shadow-sm rounded">
+                            <h5 class="mb-3">Thông tin liên hệ</h5>
+
+                            <p><i class="bi bi-geo-alt-fill me-2 icon"></i>123 Đường Nội Thất, Hà Nội</p>
+                            <p><i class="bi bi-telephone-fill me-2 icon"></i>0988 123 456</p>
+                            <p><i class="bi bi-envelope-fill me-2 icon"></i>noithatluxury@gmail.com</p>
+
+                            <hr>
+
+                            <h6 class="mt-4 mb-3">Mạng xã hội</h6>
+                            <div class="d-flex gap-3 social-links">
+                                <a href="#"><i class="bi bi-facebook"></i></a>
+                                <a href="#"><i class="bi bi-instagram"></i></a>
+                                <a href="#"><i class="bi bi-youtube"></i></a>
+                                <a href="#"><i class="bi bi-tiktok"></i></a>
+                            </div>
+
+                            <hr>
+
+                            <h6 class="mt-4 mb-3">Giờ làm việc</h6>
+                            <p>Thứ 2 – Thứ 7: 8:00 – 20:00</p>
+                            <p>Chủ nhật: 9:00 – 17:00</p>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+    </main>
 
     <!-- FOOTER -->
     <footer class="footer bg-dark text-light pt-5 pb-4 mt-5">
